bad/mul_invalid_types_void_null.example_compiler_output
ERROR
[1mbad/mul_invalid_types_void_null.lat:5:8: [1;31merror: [0;1mmultiplication is defined only for int values, not `void` and `null`[m
	foo() * null;
	      [1;32m^[m
